# sml_nexus

./: README.md
Arduino/sml_nexus_firmware/: sml_nexus_common.h  sml_nexus_firmware.ino  sml_nexus_motor.h  sml_nexus_ultrasonic_sensors.h
resources/motor_data_log_and_analysis/arduino/nexus_base_test_adafruit/: nexus_base_test_adafruit.ino
resources/motor_data_log_and_analysis/matlab/: log_nexus_pwm_adashield.mat  log_nexus_pwm_adashield_12V.mat  nexus_robot_data_extraction.m  nexus_robot_data_extraction.m~  nexus_robot_pwm_logger.m
resources/pcb_design/nexus_arduino_additional_shield/nexus_arduino_additional_shield/: nexus_arduino_additional_shield.kicad_pcb  nexus_arduino_additional_shield.kicad_pcb-bak  nexus_arduino_additional_shield.sch-bak
resources/pcb_design/nexus_arduino_cytron/nexus_arduino_cytron/: nexus_arduino_cytron-cache.lib  nexus_arduino_cytron.pro  nexus_arduino_cytron.sch  nexus_arduino_cytron.sch-bak
resources/pcb_design/nexus_arduino_cytron/nexus_arduino_cytron/Gerber/: nexus_arduino_cytron-B_Cu.gbr  nexus_arduino_cytron-B_Mask.gbr  nexus_arduino_cytron-B_Paste.gbr  nexus_arduino_cytron-Edge_Cuts.gbr  nexus_arduino_cytron-F_Cu.gbr  nexus_arduino_cytron-F_Mask.gbr  nexus_arduino_cytron-F_Paste.gbr  nexus_arduino_cytron-F_SilkS.gbr  nexus_arduino_cytron-NPTH.drl  nexus_arduino_cytron-PTH.drl
sml_nexus_description/: CMakeLists.txt  package.xml
sml_nexus_description/launch/: sml_nexus_description.launch  sml_nexus_rviz.launch
sml_nexus_description/urdf/: sml_nexus.gazebo  sml_nexus.xacro
sml_nexus_firmware/: sml_nexus_common.h  sml_nexus_firmware.ino  sml_nexus_ultrasonic_sensors.h
sml_nexus_navigation/: CMakeLists.txt  package.xml
sml_nexus_navigation/config/: costmap_common.yaml  global_costmap_static.yaml  planner.yaml
sml_nexus_navigation/config/local_planner/: dwa_planner.yaml  planner.yaml  teb_planner.yaml  trajectory_planner.yaml
sml_nexus_navigation/launch/: mocap_navigation.launch  move_base.launch
sml_nexus_robot/: CMakeLists.txt  package.xml
sml_nexus_robot/config/: nexus_pid_params.yaml  pid_params_nexus0.yaml  pid_params_nexus1.yaml  pid_params_nexus5.yaml  planner.yaml
sml_nexus_robot/config/navigation/: costmap_common.yaml  global_costmap_static.yaml  planner.yaml
sml_nexus_robot/launch/: arm.launch  bringup_nexus0.launch  bringup_nexus1.launch  bringup_nexus2.launch  bringup_nexus2.yaml  bringup_nexus5.launch  move_base.launch  sml_nexus_bringup.launch
sml_nexus_robot/src/: odometry_broadcaster.cpp
