<?xml version="1.0"?>
<package format="2">
  <name>sml_nexus_robot</name>
  <version>0.1.0</version>
  <description>The package for bringing up the 4-mecanum-wheel-drive holonomic robot of KTH Smart Mobility Lab</description>

  <author email="rbaran@kth.se">Robin Baran</author>
  <maintainer email="rbaran@kth.se">Robin Baran</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>nav_msgs</exec_depend>


</package>
